--- a/paulssonlab/src/paulssonlab/cloning/webhooks/requirements.txt
+++ b/paulssonlab/src/paulssonlab/cloning/webhooks/requirements.txt
@@ -1,170 +1,4 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-appdirs=1.4.3=py_1
-appnope=0.1.0=py38h32f6830_1001
-argtable2=2.13=h1de35cc_1001
-arrow=0.14.7=pypi_0
-attrs=19.3.0=py_0
-backcall=0.1.0=py_0
-beautifulsoup4=4.9.0=pypi_0
-benchlingapi=2.1.12=pypi_0
-biopython=1.76=py38h0b31af3_0
-black=19.10b0=py38_0
-bleach=3.1.4=pyh9f0ad1d_0
-bokeh=2.0.1=py38h32f6830_0
-bs4=0.0.1=pypi_0
-ca-certificates=2020.4.5.1=hecc5488_0
-cachetools=3.1.1=py_0
-certifi=2020.4.5.1=py38h32f6830_0
-cffi=1.14.0=py38h356ff06_0
-cfgv=3.1.0=py_0
-chardet=3.0.4=py38h32f6830_1006
-click=7.1.1=pyh8c360ce_0
-clustalo=1.2.4=hfc679d8_2
-colorlog=4.1.0=pypi_0
-cryptography=2.8=py38hb761dab_2
-cssselect=1.1.0=pypi_0
-cytoolz=0.10.1=py38h0b31af3_0
-decorator=4.4.2=py_0
-defusedxml=0.6.0=py_0
-docformatter=1.3.1=pypi_0
-editdistance=0.5.3=py38hc84c608_0
-entrypoints=0.3=py38h32f6830_1001
-escapejson=1.0=pypi_0
-fake-useragent=0.1.11=pypi_0
-freetype=2.10.1=h8da9a1a_0
-google-api-core=1.16.0=py38_1
-google-api-python-client=1.8.0=pyh8c360ce_0
-google-auth=1.13.1=pyh9f0ad1d_0
-google-auth-httplib2=0.0.3=py_3
-google-auth-oauthlib=0.4.1=pypi_0
-googleapis-common-protos=1.51.0=py38h32f6830_2
-httplib2=0.17.2=pyh9f0ad1d_0
-icu=64.2=h6de7cb9_1
-identify=1.4.14=pyh9f0ad1d_0
-idna=2.9=py_1
-importlib-metadata=1.6.0=py38h32f6830_0
-importlib_metadata=1.6.0=0
-inflection=0.3.1=pypi_0
-ipykernel=5.2.0=py38h23f93f0_1
-ipython=7.13.0=py38h32f6830_2
-ipython_genutils=0.2.0=py_1
-jedi=0.16.0=py38h32f6830_1
-jinja2=2.11.1=py_0
-jpeg=9c=h1de35cc_1001
-json5=0.9.0=py_0
-jsonschema=3.2.0=py38h32f6830_1
-jupyter_client=6.1.2=py_0
-jupyter_core=4.6.3=py38h32f6830_1
-jupyterlab=2.1.0=py_0
-jupyterlab_code_formatter=1.2.3=py_0
-jupyterlab_server=1.1.0=py_1
-libblas=3.8.0=16_openblas
-libcblas=3.8.0=16_openblas
-libcxx=10.0.0=0
-libffi=3.2.1=h4a8c4bd_1007
-libgfortran=4.0.0=2
-liblapack=3.8.0=16_openblas
-libopenblas=0.3.9=h3d69b6c_0
-libpng=1.6.37=hbbe82c9_1
-libprotobuf=3.11.4=hd174df1_0
-libsodium=1.0.17=h01d97ff_0
-libtiff=4.1.0=h2ae36a8_6
-libuv=1.34.0=h0b31af3_0
-libwebp-base=1.1.0=h0b31af3_3
-llvm-openmp=10.0.0=h28b9765_0
-loggable-jdv=0.1.7=pypi_0
-lxml=4.5.0=pypi_0
-lz4-c=1.9.2=h4a8c4bd_0
-mafft=7.458=h01d97ff_0
-markupsafe=1.1.1=py38h64e0658_1
-marshmallow=3.5.1=pypi_0
-mistune=0.8.4=py38h64e0658_1001
-mypy_extensions=0.4.3=py38h32f6830_1
-nbconvert=5.6.1=py38_0
-nbformat=5.0.4=py_0
-ncurses=6.1=h0a44026_1002
-nodeenv=1.3.5=py_0
-nodejs=13.12.0=h38d8c5a_0
-notebook=6.0.3=py38_0
-numpy=1.18.1=py38h1f821a2_1
-oauth2client=4.1.3=pypi_0
-oauthlib=3.1.0=pypi_0
-olefile=0.46=py_0
-openssl=1.1.1f=h0b31af3_0
-packaging=20.1=py_0
-pandas=1.0.3=py38h5fc983b_0
-pandoc=2.9.2=0
-pandocfilters=1.4.2=py_1
-parse=1.15.0=pypi_0
-parso=0.6.2=py_0
-pathspec=0.8.0=pyh9f0ad1d_0
-pexpect=4.8.0=py38h32f6830_1
-pickleshare=0.7.5=py38h32f6830_1001
-pillow=7.1.1=py38h83dc5e5_0
-pip=20.0.2=py_2
-pre-commit=2.2.0=py38h32f6830_1
-primer3-py=0.6.0=pypi_0
-primer3plus=1.0.8=pypi_0
-prometheus_client=0.7.1=py_0
-prompt-toolkit=3.0.5=py_0
-protobuf=3.11.4=py38hc84c608_1
-ptyprocess=0.6.0=py_1001
-pyasn1=0.4.8=py_0
-pyasn1-modules=0.2.7=py_0
-pycparser=2.20=py_0
-pyee=7.0.1=pypi_0
-pygments=2.6.1=py_0
-pygsheets=2.0.3.1=pypi_0
-pyopenssl=19.1.0=py_1
-pyparsing=2.4.7=pyh9f0ad1d_0
-pyppeteer=0.0.25=pypi_0
-pyquery=1.4.1=pypi_0
-pyrsistent=0.16.0=py38h64e0658_0
-pysocks=1.7.1=py38h32f6830_1
-python=3.8.2=hd5f0129_5_cpython
-python-dateutil=2.8.1=py_0
-python_abi=3.8=1_cp38
-pytoml=0.1.21=py_0
-pytz=2019.3=py_0
-pyyaml=5.3.1=py38h64e0658_0
-pyzmq=19.0.0=py38h1fcdcd6_1
-readline=8.0=hcfe32e1_0
-regex=2020.4.4=py38h64e0658_0
-requests=2.23.0=pyh8c360ce_2
-requests-html=0.10.0=pypi_0
-requests-oauthlib=1.3.0=pypi_0
-rsa=4.0=py_0
-send2trash=1.5.0=py_0
-setuptools=46.1.3=py38h32f6830_0
-simplejson=3.17.0=py38h0b31af3_0
-six=1.14.0=py_1
-soupsieve=2.0=pypi_0
-sqlite=3.30.1=h93121df_0
-terminado=0.8.3=py38h32f6830_1
-testpath=0.4.4=py_0
-tk=8.6.10=hbbe82c9_0
-toml=0.10.0=py_0
-toolz=0.10.0=py_0
-tornado=6.0.4=py38h64e0658_1
-tqdm=4.45.0=pyh9f0ad1d_0
-traitlets=4.3.3=py38h32f6830_1
-typed-ast=1.4.1=py38h0b31af3_0
-typing_extensions=3.7.4.1=py38h32f6830_3
-untokenize=0.1.1=pypi_0
-uritemplate=3.0.1=py_0
-urllib3=1.25.8=py38h32f6830_1
-urlopen=1.0.0=pypi_0
-virtualenv=16.7.5=py_0
-w3lib=1.21.0=pypi_0
-wcwidth=0.1.9=pyh9f0ad1d_0
-webencodings=0.5.1=py_1
-websockets=8.1=pypi_0
-wheel=0.34.2=py_1
-xz=5.2.5=h0b31af3_0
-yaml=0.2.3=h0b31af3_0
-zeromq=4.3.2=h6de7cb9_2
-zipp=3.1.0=py_0
-zlib=1.2.11=h0b31af3_1006
-zstd=1.4.4=h4b3e974_3
+Flask
+gunicorn
+google-api-python-client
+pygsheets
