--- a/paulssonlab/src/paulssonlab/martens/trenchcoat/seg_params.yaml
+++ b/paulssonlab/src/paulssonlab/martens/trenchcoat/seg_params.yaml
@@ -1,28 +1,46 @@
-YFP:
-    is_segmentation: False
-    fluorescent: True
-    niblack_k: Null
-    niblack_w: Null
-    otsu_multiplier: Null
-    background: 110
-mCherry:
-    is_segmentation: True
-    fluorescent: True
-    niblack_k: 1.4
-    niblack_w: 3
-    otsu_multiplier: 1.3
-    background: 110
 CFP:
-    is_segmentation: True
-    fluorescent: True
-    niblack_k: 1.4
-    niblack_w: 3
-    otsu_multiplier: 1.0
-    background: 110
-BF:
-    is_segmentation: False
-    fluorescent: False
-    niblack_k: Null
-    niblack_w: Null
-    otsu_multiplier: Null
-    background: Null
+    algorithm: "niblack_phase"
+    
+    fluorescent_channel: "CFP"
+    phase_channel: "Phase"
+    
+    parameters:
+        niblack_k: -0.45
+        niblack_w: 7
+        otsu_multiplier: 0.9
+        fluor_background: 0
+        garbage_otsu_value: 130
+        scaling_factor: 1
+        
+        phase_background: 0
+        phase_threshold_min: 0
+        phase_threshold_max: 400
+        phase_sigma: 0.5
+        
+        min_size: 40
+        
+        # In microns^2. Must use pixel_microns for conversion!
+        #minimum_area: 0.2
+MCHERRY:
+    algorithm: "niblack_phase"
+    
+    fluorescent_channel: "MCHERRY"
+    phase_channel: "Phase"
+    
+    parameters:
+        niblack_k: -0.45
+        niblack_w: 7
+        otsu_multiplier: 0.9
+        fluor_background: 0
+        garbage_otsu_value: 130
+        scaling_factor: 1
+        
+        phase_background: 0
+        phase_threshold_min: 0
+        phase_threshold_max: 400
+        phase_sigma: 0.5
+        
+        min_size: 40
+        
+        # In microns^2. Must use pixel_microns for conversion!
+        #minimum_area: 0.2
