--- a/paulssonlab/src/paulssonlab/inventory/environment.yml
+++ b/paulssonlab/src/paulssonlab/inventory/environment.yml
@@ -5,7 +5,6 @@ channels:
   - defaults
 dependencies:
   - apsw
-  - black
   - bokeh
   - cachetools
   - click
@@ -15,15 +14,11 @@ dependencies:
   - jupyterlab
   - jupyterlab_code_formatter
   - matplotlib
-  - nbformat
+  - nd2reader
   - nodejs
   - numpy
   - pandas
   - peewee
-  - pip
-  - pip:
-      - docformatter
-  - pre-commit
+  - python-xxhash
+  - tifffile
   - tqdm
-  - xxhash
-  - zarr
