--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@
 *.png
 *.jpg
 *.jpeg
+*.pdf
+*.log
 *.tar
 *.gz
 *.bz2
@@ -175,7 +177,6 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
