--- a/paulssonlab/src/paulssonlab/deaton/nanopore/.envrc
+++ b/paulssonlab/src/paulssonlab/deaton/nanopore/.envrc
@@ -1,2 +1,5 @@
 source_up .envrc_base
+export PATH="${src}/deaton/nanopore/ont-guppy/bin:${PATH}"
+module load gcc/6.2.0
+module load cuda/10.2
 initenv
