--- a/paulssonlab/src/paulssonlab/martens/trenchcoat/napari_settings.yaml
+++ b/paulssonlab/src/paulssonlab/martens/trenchcoat/napari_settings.yaml
@@ -1,27 +1,13 @@
-Phase:
+Phase_TRIPLE:
     rgb            : False
     multiscale     : False
-    colormap       : "gray_trans"
+    colormap       : "gray"
     contrast_limits:
         - 100
-        - 1000
+        - 65535
     gamma          : 1.0
     interpolation  : "nearest"
-    name           : "Phase contrast"
-    opacity        : 1.0
-    blending       : "additive"
-    visible        : True
-
-CFP:
-    rgb            : False
-    multiscale     : False
-    colormap       : "cyan"
-    #contrast_limits:
-        #- 100
-        #- 1000
-    gamma          : 1.0
-    interpolation  : "nearest"
-    name           : "mSCFP3"
+    name           : "Brightfield"
     opacity        : 1.0
     blending       : "additive"
     visible        : True
@@ -30,9 +16,9 @@ YFP:
     rgb            : False
     multiscale     : False
     colormap       : "yellow"
-    #contrast_limits:
-        #- 100
-        #- 1000
+    contrast_limits:
+        - 100
+        - 10000
     gamma          : 1.0
     interpolation  : "nearest"
     name           : "mVenus"
@@ -44,12 +30,12 @@ MCHERRY:
     rgb            : False
     multiscale     : False
     colormap       : "red"
-    #contrast_limits:
-        #- 100
-        #- 1000
+    contrast_limits:
+        - 100
+        - 10000
     gamma          : 1.0
     interpolation  : "nearest"
     name           : "mKate2"
     opacity        : 1.0
     blending       : "additive"
-    visible        : True
+    visible        : True 
