--- a/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
@@ -18,8 +18,8 @@ dependencies:
   - hvplot
   - ipywidgets
   - jsondiff
-  - jupyterlab>=2.0.0,<3
-  - jupyterlab_code_formatter
+  - jupyterlab=2.2.9
+  - jupyterlab_code_formatter=1.3.8
   - mafft
   - matplotlib
   - nbformat
