--- a/paulssonlab/src/paulssonlab/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/cloning/environment.yml
@@ -13,6 +13,7 @@ dependencies:
   - cytoolz
   - google-api-python-client
   - ipywidgets
+  - jsondiff
   - jupyterlab=2.2.9
   - jupyterlab_code_formatter=1.3.8
   - mafft
@@ -34,4 +35,5 @@ dependencies:
   - pytoml
   - requests
   - snakemake-minimal
+  - tatsu
   - tqdm
