--- a/paulssonlab/src/paulssonlab/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/cloning/environment.yml
@@ -12,28 +12,27 @@ dependencies:
   - clustalo
   - cytoolz
   - google-api-python-client
-  - ipywidgets
   - jsondiff
-  - jupyterlab=2.2.9
-  - jupyterlab_code_formatter=1.3.8
+  - jupyterlab
+  - jupyterlab_code_formatter
   - mafft
   - nbformat
+  - nextflow
+  - nf-core
   - nodejs
   - numpy
   - pandas
   - pip
   - pip:
       - benchlingapi
+      - dnachisel
       - escapejson
       - primer3-py
       - primer3plus
       - requests-html
       - pygsheets
       - pyppeteer
-  - pre-commit
-  - pysftp
   - pytoml
   - requests
-  - snakemake-minimal
   - tatsu
   - tqdm
