--- a/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
@@ -13,16 +13,17 @@ dependencies:
   - clustalo
   - cytoolz
   - google-api-python-client
-  - google-cloud-sdk
   - holoviews
   - hvplot
   - ipywidgets
   - jsondiff
-  - jupyterlab=2.2.9
-  - jupyterlab_code_formatter=1.3.8
+  - jupyterlab
+  - jupyterlab_code_formatter
   - mafft
   - matplotlib
   - nbformat
+  - nextflow
+  - nf-core
   - nodejs
   - numpy
   - pandas
@@ -36,7 +37,6 @@ dependencies:
       - requests-html
       - pygsheets
       - pyppeteer
-  - pre-commit
   - pytoml
   - requests
   - seaborn
